Href and Content

--- a/MODUL1 SURYA/profile.html
+++ b/MODUL1 SURYA/profile.html
@@ -11,26 +11,41 @@
     <title>EAD Store</title>
 </head>
 
-<body>
+<body style="background-color: #f8f9fa;">
 
 <ul class="nav" style="background-color:#343a40;">
     <li>
-        <a class="navbar-brand">
+        <a class="navbar-brand pl-4">
             <img src=
             "
-            pake si github aja nanti setelah commit
+            https://raw.githubusercontent.com/DedeMastra/WAD-SURYA-1202184135/master/MODUL1%20SURYA/logo-ead.png
             "
-            alt="pake si github aja nanti setelah commit" width = "50" height = "50"/>
+            alt="pake si github aja nanti setelah commit" width = "112" height = "35"/>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active"  style="color: #B2B2B2;" href="#">Home</a>
+        <a class="nav-link"  style="color: #B2B2B2; vertical-align:middle;" 
+        href=
+        "
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/home.html
+        "
+        >Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" style="color: white;" href="#">Profile</a>
+        <a class="nav-link active" style="color: white; vertical-align:middle;" 
+        href=
+        "
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/profile.html
+        "
+        >Profile</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" style="color: #B2B2B2;" href="#">Product</a>
+        <a class="nav-link" style="color: #B2B2B2; vertical-align:middle;" 
+        href=
+        "
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/product.html
+        "
+        >Product</a>
     </li>
 </ul>
 
@@ -38,15 +53,15 @@
     <div class="col-sm-3">
     </div>
     <div class="col-sm-6">
-        <div style="background-color:powderblue;">
-            <a class="nav-link disabled" href="#">
+        <div style="background-color:white;">
+            <div style="background-color:#ebeced;">
                 <img src=
                 "
-                pake si github aja nanti setelah commit
+                https://raw.githubusercontent.com/DedeMastra/WAD-SURYA-1202184135/master/MODUL1%20SURYA/logo-ead.png
                 "
-                alt="pake si github aja nanti setelah commit" width = "50" height = "50"/>
-            </a>
-            <div class="pl-3 pr-3 pb-4"> 
+                alt="pake si github aja nanti setelah commit" width = "335" height = "120" class="rounded mx-auto d-block pt-3 pb-3">
+            </div>
+            <div class="mt-3 pl-3 pr-3 pb-4" style="color: black;"> 
                 <div>
                     <p>
                        EAD Store merupakan toko elektronik yang menjual barang-barang sebagai berikut:
