--- a/MODUL1 SURYA/product.html
+++ b/MODUL1 SURYA/product.html
@@ -11,30 +11,45 @@
     <title>EAD Store</title>
 </head>
 
-<body>
+<body style="background-color: #f8f9fa;">
 
 <ul class="nav" style="background-color:#343a40;">
     <li>
-        <a class="navbar-brand">
+        <a class="navbar-brand pl-3">
             <img src=
             "
-            pake si github aja nanti setelah commit
+            https://raw.githubusercontent.com/DedeMastra/WAD-SURYA-1202184135/master/MODUL1%20SURYA/logo-ead.png
             "
-            alt="pake si github aja nanti setelah commit" width = "50" height = "50"/>
+            alt="pake si github aja nanti setelah commit" width = "112" height = "35"/>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active"  style="color: #B2B2B2;" href="#">Home</a>
+        <a class="nav-link"  style="color: #B2B2B2;" 
+        href=
+        "
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/home.html
+        "
+        >Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" style="color: #B2B2B2;" href="#">Profile</a>
+        <a class="nav-link" style="color: #B2B2B2;" 
+        href=
+        "
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/profile.html
+        "
+        >Profile</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" style="color: white;" href="#">Product</a>
+        <a class="nav-link active" style="color: white;" 
+        href=
+        "
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/product.html
+        "
+        >Product</a>
     </li>
 </ul>
 
-<div class="container mt-5 w-75" style="background-color:powderblue;">
+<div class="container mt-5 w-75" style="background-color:white;">
     <h3 class="pb-3 pt-3 text-center"> Daftar Barang </h3>
     <div> 
         <table class="table" style="font-size: small;">
@@ -50,7 +65,7 @@
                 <th class="text-center" style="vertical-align:top;" scope="col">Harga</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="font-weight-light">
                 <tr>
                   <th class="text-center" style="vertical-align:top;" scope="col" rowspan="5">Ready Stock</th>
                   <th class="text-center" style="vertical-align:top;" scope="col">All-in-One 24-f0051d [3JV73AA]</th>
