--- a/MODUL1 SURYA/home.html
+++ b/MODUL1 SURYA/home.html
@@ -27,7 +27,7 @@
         <a class="nav-link active"  style="color: white;" 
         href=
         "
-        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/home.html
+        https://htmlpreview.github.io/?https:://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/home.html
         "
         >Home</a>
     </li>
@@ -43,7 +43,7 @@
         <a class="nav-link" style="color: #B2B2B2;" 
         href=
         "
-        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-1202184135/blob/master/MODUL1%20SURYA/product.html
+        https://htmlpreview.github.io/?https://github.com/DedeMastra/WAD-SURYA-12021841351/blob/master/MODUL1%20SURYA/product.html
         "
         >Product</a>
     </li>
@@ -52,7 +52,7 @@
 <div class="container mt-5">
     <div class="row align-items-center justify-content-center" style="background-color:#ebeced">
         <div class="col pr-3 pl-3">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/AwMeQJ_u73I"></iframe>
+            <iframe width="500" height="300" ="https://www.youtube.com/embed/AwMeQJ_u73I"></iframe>
         </div>
         <div class="col pt-5 pb-5 pr-5 pl-5" style="background-color:white">
             <h3 class="pb-3 text-center"> Registrasi Data Pelanggan </h3>
@@ -107,7 +107,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Kirim</button>
+                    <button type="submit" class="btn btn-primary btn-lg ">Kirim</button>
                 </div>
             </form>
         </div>
